--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ main > article, nav{
   box-sizing: border-box;
 }
 
+main > article {
+  position: relative;
+  z-index: 0;
+}
+
 nav {
   display: flex;
 }
